--- a/curve.html
+++ b/curve.html
@@ -147,7 +147,7 @@
 	  						<td><input type=checkbox></td>
 							<td>${nm('flow',col).val()}</td>
 							<td>${nm('head',col).val()}</td>
-							<td>${Cond[idx-2].name}</td>							
+							<td>${Conds[idx-2].name}</td>							
 						</tr>`);
 	});
 	Cnv = dom('canvas');
