--- a/headtool.html
+++ b/headtool.html
@@ -138,11 +138,11 @@
 			distF = 1000;
         }
 		let 
-			flow = cvt(Flow,CVT_FLOW,0,flowU),
+			flow = cvt(Cond.flow,CVT_FLOW,0,flowU),
 			sucTnk = dom(nm('suc')).checked,
 			elevHd = nm('Zd').val()-(sucTnk ? nm('Ztnk_s') : nm('Zs')).val(),
 			presHd = cvt(nm('Pd').val()-(sucTnk ? nm('Pg_s') : nm('Ps')).val(),
-				{kPa:0.145037738007,m:1.42197020632,ft:0.433527501928}/SG,3,Units[2]),
+				{kPa:0.145037738007,m:1.42197020632,ft:0.433527501928}/Cond.specific_gravity,3,Units[2]),
 			vHdS = vHd(v(nm('Ds').val()/distF,flow),g),
 			vHdD = vHd(v(nm('Dd').val()/distF,flow),g),
 			vHdDif = vHdD - (sucTnk ? 0 : vHdS),
@@ -168,9 +168,10 @@
 		nm(`${s}d`).after(em(_txt));
 	}
 	function accept() {
-		HeadEl.val(rnd(Head));
+		Cond.head = Head;
+		//HeadEl.val(rnd(Head));
 		backToGrid();
-		HeadEl.change();
+		//HeadEl.change();
 	}
 	_txt = Units[2] == 'ft' ? 'inches' : 'mm';
 	hdFldUnit('D');
@@ -181,8 +182,8 @@
 	_txt = Units[3];
 	hdFldUnit('P');
 	hdFldUnit('Pg_');
-	$('#flow').html(Flow+em(Units[0]));
-	$('#sg').text(SG);
+	$('#flow').html(Cond.flow+em(Units[0]));
+	$('#sg').text(Cond.specific_gravity);
 	$('input').change(function () {
 		$('#results td:nth-child(2):gt(0)').text('');
 		$('#accept').hide();
