--- a/grid.html
+++ b/grid.html
@@ -286,7 +286,7 @@
   }
 
   function colCond(e) {
-    return Conds[$(e).parent().data('idx')];
+    return $(e).parent().data('cond');
   }  
   function rm(e) {
     colCond(e).grid = false;
@@ -342,7 +342,7 @@
     backload("headTool");
   }
   function edit(e) {
-    Cond = Conds[$(e).parent().data('idx')];
+    Cond = colCond(e);
     backload('notes');
   }
   function backload(nm) {
@@ -375,7 +375,7 @@
             const newEl = $(e).children().eq(1).clone();            
             $(e).append(newEl);
             newEl.find('input,select').attr('tabindex',newEl.index());
-            newEl.data('idx',idx);
+            newEl.data('cond',d);
             if (i==0) {
               newEl.find('span').text(d.name);     
             } else {              
