--- a/headtool.html
+++ b/headtool.html
@@ -170,7 +170,7 @@
 	function accept() {
 		Cond.head = Head;
 		saveConds();
-		backToGrid();
+		back();
 	}
 	_txt = Units[2] == 'ft' ? 'inches' : 'mm';
 	hdFldUnit('D');
