--- a/curve.html
+++ b/curve.html
@@ -142,8 +142,8 @@
 	Conds.filter(c => c.grid).forEach(c => {
 	  pg('#points tr').last().before(`<tr>
 	  						<td><input type=checkbox></td>
-							<td>${c.flow}</td>
-							<td>${c.head}</td>
+							<td>${rnd(c.flow)}</td>
+							<td>${rnd(c.head)}</td>
 							<td>${c.name}</td>							
 						</tr>`);		
 	});
