--- a/index.html
+++ b/index.html
@@ -166,21 +166,24 @@
       }
 
       CVT_FLOW = {MGD:694.4422834,'m^3/hr':4.402867544,'L/s':15.85032316, 
-        'm^3/s':15850.32316, 'ft^3/s':448.8311693};
-      CVT_POWER = {kW:1.341022218}
-      CVT_DIST = {m:3.280839895};
+        'm^3/s':15850.32316, 'ft^3/s':448.8311693, _num:0};
+      CVT_POWER = {kW:1.341022218, _num:1}
+      CVT_DIST = {m:3.280839895, _num:2};
+      CVT_PRESSURE = {kPa:0.145037738007,m:1.42197020632,ft:0.433527501928,_num=3};
 
-      function cvtObj(d,nms,m,old,nu) {
+      function unit(m) {
+        return Units[m._num];
+      }
+      function cvtObj(d,nms,m,nu,old) {
         $.makeArray(nms).forEach((nm)=>{
-          d[nm] = cvt(d[nm],m,old,nu);
+          d[nm] = cvt(d[nm],m,nu,old);
         });
       }
-      function cvt(v,m,old,nu) {
-        const o=$.isNumeric(old)?Units[old]:old;
-        if (m[o] != m[nu]) {
+      function cvt(v,m,nu,old=units(m)) {
+        if (m[old] != m[nu]) {
           if ($.isNumeric(v)) {
-            if (m[o]) {
-              v *= m[o];
+            if (m[old]) {
+              v *= m[old];
             }
             if (m[nu]) {
               v /= m[nu];
