--- a/curve.html
+++ b/curve.html
@@ -168,7 +168,7 @@
 	function showUnit(txt,u) {
 		pg(`th:contains(${txt})`).append(em(unit(u)));
 	}
-	showUnit('Flow',CVT_FLOW);
-	showUnit('Head',CVT_DIST);
+	showUnit('Flow',FLOW);
+	showUnit('Head',DIST);
 </script>
 
