--- a/grid.html
+++ b/grid.html
@@ -314,16 +314,16 @@
   function colArgs(col) {
     const d=setData({},col);
     d['line'] = nm('line',col);
-    cvtObj(d,'flow',CVT_FLOW,'m^3/s');
-    cvtObj(d,['motor_rated_power','motor_field_power'],CVT_POWER,'kW');      
-    cvtObj(d,'head',CVT_DIST,'m');
+    cvtObj(d,'flow',FLOW,'m^3/s');
+    cvtObj(d,['motor_rated_power','motor_field_power'],POWER,'kW');      
+    cvtObj(d,'head',DIST,'m');
     return d;
   }
   function results() {
     $('th:gt(1)').each((i,e)=>{
       const col = $(`td:nth-child(${$(e).index()+1})`),
         a = colArgs(col), r = Bridge.results(a);
-      cvtObj(r,[2,3,4,5,6,7,14],CVT_POWER,unit(CVT_POWER),'kW');            
+      cvtObj(r,[2,3,4,5,6,7,14],POWER,unit(POWER),'kW');            
       col.filter('#results~tr:not(.th) td').each((i,e)=>{        
         $(e).html(`<div>
                     <span ${i==2 && r[4]>nm('motor_rated_power',col).val() ? 'style=background-color:#FECB00' : ''}>
@@ -350,15 +350,15 @@
     $(`td>div:not(:has(em)):contains(${nm})`).append(`<em>(${txt})</em>`);
   }  
 
-  txt = unit(CVT_POWER);
+  txt = unit(POWER);
   fldUnit('Power Rating');
   fldUnit('Motor Rated');
   fldUnit('Motor Shaft');
   fldUnit('Pump Shaft');
   fldUnit('Motor Power');
-  txt = unit(CVT_DIST);
+  txt = unit(DIST);
   fldUnit('Head');
-  txt = unit(CVT_FLOW);
+  txt = unit(FLOW);
   fldUnit('Flow');
 
   Conds.filter(c => c.grid).forEach(c => {
