--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
         if (reset) {
           saveProp('defCond', {
             pump_style: 5,
-            pump_rpm: 1780,
+            pump_rated_speed: 1780,
             drive: 0,
             viscosity: 1,
             specific_gravity: 1,
