--- a/grid.html
+++ b/grid.html
@@ -166,7 +166,7 @@
     </td>
   </tr>-->
   <tr>
-    <td><div>Motor Power</div></td>
+    <td><div>Motor Power<em>(Kw)</em></div></td>
     <td><input name='motor_field_power' onchange="clrFld('motor_field_current',this)"></td>
   </tr>
   <tr>
@@ -316,16 +316,14 @@
     d['line'] = nm('line',col);
     //cvtObj(d,'flow',FLOW,'m^3/s');
     cvtObj(d,'motor_rated_power',POWER,'hp');
-    cvtObj(d,'motor_field_power',POWER,'kW');      
+    //cvtObj(d,'motor_field_power',POWER,'kW');      
     //cvtObj(d,'head',DIST,'m');
     return d;
   }
   function results() {
     $('th:gt(1)').each((i,e)=>{
       const col = $(`td:nth-child(${$(e).index()+1})`),
-        a = colArgs(col), r = Bridge.results((msg) => {
-  console.log(msg); // 'hello world'
-},a);
+        a = colArgs(col), r = Bridge.results(a);
       console.log(a);
       for (var key in r) {
         console.log(key,r[key][0]);  
@@ -333,8 +331,6 @@
       cvtObj(r,'Motor Shaft Power',POWER,unit(POWER),'hp');
       r['Motor Efficiency'][0]*=100;
       r['Motor Power Factor'][0]*=100;
-
-      //cvtObj(r,[2,3,4,5,6,7,14],POWER,unit(POWER),'kW');      
       for (var key in r) {
         col.filter('#results~tr:not(.th) td').filter((i,e)=>$(e).data('rowNm')==key).html(
           `<div>
@@ -368,7 +364,7 @@
   fldUnit('Motor Rated');
   fldUnit('Motor Shaft');
   fldUnit('Pump Shaft');
-  fldUnit('Motor Power');
+  //fldUnit('Motor Power');
   txt = unit(DIST);
   fldUnit('Head');
   txt = unit(FLOW);
