--- a/grid.html
+++ b/grid.html
@@ -166,7 +166,7 @@
     </td>
   </tr>-->
   <tr>
-    <td><div>Motor Power<em>(Kw)</em></div></td>
+    <td><div>Motor Power<em>(kW)</em></div></td>
     <td><input name='motor_field_power' onchange="clrFld('motor_field_current',this)"></td>
   </tr>
   <tr>
