--- a/headtool.html
+++ b/headtool.html
@@ -28,7 +28,7 @@
 }
 </style>
 <h1>Head Tool</h1>
-<img src='headtool_a.png' width=100%>
+<img src='headtool_a.png' width=600>
 <table style='width: 100%'>
 	<tr>
 		<td>
