--- a/headtool.html
+++ b/headtool.html
@@ -40,11 +40,11 @@
 				</tr>
 				<tr>
 					<td>
-						Suction pipe inner diameter<br>
+						Pipe inner diameter<br>
 						<input name=Ds><br>
 					</td>
 					<td>
-						Discharge pipe inner diameter<br>
+						Pipe inner diameter<br>
 						<input name=Dd><br>
 					</td>
 				</tr>
@@ -58,33 +58,33 @@
 				</tr>
 				<tr>
 					<td class=sucGauge>
-						Suction gauge pressure <strong>(Ps)</strong><br>
+						Gauge pressure <strong>(Ps)</strong><br>
 						<input name=Ps><br>
 					</td>
 					<td>
-						Discharge gauge pressure <strong>(Pd)</strong><br>
+						Gauge pressure <strong>(Pd)</strong><br>
 						<input name=Pd><br>
 
 					</td>
 				</tr>
 				<tr>
 					<td class=sucGauge>
-						Suction gauge elevation <strong>(Zs)</strong><br>
+						Gauge elevation <strong>(Zs)</strong><br>
 						<input name=Zs><br>
 					</td>
 					<td>
-						Discharge gauge elevation <strong>(Zd)</strong><br>
+						Gauge elevation <strong>(Zd)</strong><br>
 						<input name=Zd><br>
 
 					</td>
 				</tr>
 				<tr>
 					<td>
-						Suction line loss coefficients <strong>(Ks)</strong><br>
+						Line loss coefficients <strong>(Ks)</strong><br>
 						<input name=Ks><br>
 					</td>
 					<td>
-						Discharge line loss coefficients <strong>(Kd)</strong><br>
+						Line loss coefficients <strong>(Kd)</strong><br>
 						<input name=Kd><br>
 
 					</td>
