--- a/headtool.html
+++ b/headtool.html
@@ -35,6 +35,15 @@
 <img src='headtool_a.png' width=600>
 			<table>
 				<tr>
+					<td>Suction tank</td>
+					<td>
+						<label>
+							<input name=suc onchange='suction(this)' type=checkbox>
+						</label>
+					</td>
+					<td></td>
+				</tr>
+				<tr>
 					<th></th>
 					<th>Suction</th>
 					<th>Discharge</th>
@@ -47,15 +56,6 @@
 					<td>
 						<input name=Dd>
 					</td>
-				</tr>
-				<tr>
-					<td></td>
-					<td>
-						<label>Suction tank<br>
-							<input name=suc onchange='suction(this)' type=checkbox>
-						</label>
-					</td>
-					<td></td>
 				</tr>
 				<tr>
 					<td>Gauge pressure</td>
